# ForgeOne

./: .gitignore  11july-2025.txt  Cargo.toml  Implementation.txt  README.md  architecture.txt  dependency.txt  output.txt  p1-roadmap.txt  tree.txt  tree_structure.txt
.vercel/: project.json
common/: .gitignore  Cargo.toml  README.md  README_advanced_structure.md  advanced_folder_structure_plan.md  audit_README.txt  audit_REDB_PRODUCTION.txt  implementation_guide.md  migration_script.ps1  tree.py  tree_structure.txt
common/data/redb/: blobs_shard_1.redb  events_shard_2.redb  logs_shard_2.redb  system.redb
common/src/: Deployment.md  audit.rs  audit.txt  bootstrap.rs  config.rs  crypto.rs  diagnostics.rs  error.rs  identity.rs  lib.rs  macros.rs  model.rs  observer.rs  policy.rs  prelude.rs  syscall.rs  syscall_client.md  syscall_client.rs  telemetry.rs  trust.rs  updation_plan.txt
common/src/db/: access.rs  crypto.rs  indxdb.rs  integrity.rs  metrics.rs  mod.rs  model.rs  recovery.rs  redb.rs  schema.rs  snapshot.rs
common/tests/: audit_tests.rs  bootstrap_tests.rs  config_tests.rs  consciousness.rs  crypto_tests.rs  db_access.rs  db_crypto.rs  db_integrity.rs  db_metrics.rs  db_mod.rs  db_model.rs  db_recovery.rs  db_redb.rs  db_schema.rs  db_snapshot.rs  diagnotics_tests.rs  error_tests.rs  identity_tests.rs  observation_tests.rs  policy_tests.rs  redb_streaming_test.rs  telemetry_tests.rs  trust_tests.rs
debbuger/: anr.py  ind.py  main.py  requirements.txt
debbuger/enhanced_output/: enhanced_analysis_report.json  interactive_report.html
debbuger/output/: error_report.html  error_report.json
docs/: README.md  architecture_diagrams.md  container-config.md  container-runtime-l4.txt  folder-structure-atomic.txt  guidelines.txt  production-readiness-todo.txt  syscall_architecture.md  syscall_execution_flow.md
docs/agile/: README.md  epics-features.md  planning.md  retrospectives.md  sprints.md
docs/api/: README.md  openapi.yaml
docs/architecture/: README.md  hld.md  lld.md  security-model.md  security-threat-model.md
docs/common/: README.md  audit.md  bootstrap.md  config.md  crypto.md  db.md  diagnostics.md  error.md  identity.md  macros.md  model.md  observer.md  policy.md  prelude.md  structure.txt  telemetry.md  trust.md
docs/compliance/: README.md  audit.md  license.md  privacy.md
docs/contrib/: README.md  code-style.md
docs/database/: README.md  backups.md  schema.md  schema.sql
docs/infra/: README.md  ci-cd.md  deployment.md
docs/microkernel/: README.md  README_advanced_structure.md  config.md  core.md  crypto.md  diagnostics.md  execution.md  implementation_plan.md  index.txt  interface.md  migration_script.ps1  observer.md  trust.md
docs/network_manager/: api.md  architecture.md  bridge.md  cni.md  dns.md  firewall.md  index.txt  nat.md  (+3 more)
microkernel/: Cargo.toml
microkernel/benches/: syscall_benchmarks.rs
microkernel/src/: lib.rs  telemetry.rs
microkernel/src/core/: boot.rs  mod.rs  runtime.rs  scheduler.rs
microkernel/src/execution/: mod.rs  sandbox.rs  syscall.rs  wasm.rs
microkernel/src/interface/: mod.rs
microkernel/src/syscall_bridge/: mod.rs
microkernel/src/syscall_engine/: README.md  mod.rs
microkernel/src/telemetry/: mod.rs  syscall_metrics.rs
microkernel/src/trust/: README.md  attestation.rs  evaluation.rs  mod.rs  redzone.rs  syscall_enforcer.rs  zta_policy.rs
microkernel/tests/: core_tests.rs  execution_tests.rs  other_modules_tests.rs  syscall_boundary_telemetry_tests.rs  syscall_boundary_tests.rs  telemetry_tests.rs  trust_tests.rs
modules/: api-l8.txt  cli-l9.txt  common-l1.txt  container-runtime-l4.txt  microkernel-l2.txt  network-manager-l5.txt  plugin-manager-l3.txt  security-l7.txt  storage-manager-l6.txt
network-manager/: Cargo.toml  README.md  build.rs  index.txt
network-manager/proto/: network.proto
network-manager/src/: lib.rs  model.rs
network-manager/src/api/: README.md  grpc.rs  mod.rs  rest.rs  server.rs
network-manager/src/api/proto/: mod.rs
network-manager/src/bridge/: mod.rs  netlink.rs
network-manager/src/cni/: README.md  mod.rs  plugin.rs  server.rs
network-manager/src/dns/: mod.rs
network-manager/src/firewall/: iptables.rs  mod.rs  nftables.rs  policy.rs
network-manager/src/mesh/: mod.rs
network-manager/src/metrics/: collector.rs  exporter.rs  mod.rs
network-manager/src/nat/: mod.rs
network-manager/src/vnet/: mod.rs  overlay.rs  underlay.rs
network-manager/tests/: api_test.rs  bridge_test.rs  cni_test.rs  dns_test.rs  firewall_test.rs  mesh_test.rs  metrics_test.rs  nat_test.rs  vnet_test.rs
plugin-manager/: Cargo.toml  README.md  build.rs  changes.txt  index.txt
plugin-manager/examples/: main.rs
plugin-manager/examples/sample-plugin/: Cargo.toml  manifest.json
plugin-manager/examples/sample-plugin/src/: lib.rs
plugin-manager/src/: lib.rs  manager.rs  plugin.rs  registry.rs
plugin-manager/src/abi/: mod.rs  vm.rs
plugin-manager/src/attestation/: mod.rs  verify.rs
plugin-manager/src/extension/: mod.rs
plugin-manager/src/lifecycle/: mod.rs
plugin-manager/src/loader/: mod.rs
plugin-manager/src/metrics/: mod.rs
plugin-manager/src/runtime/: execution.rs  mod.rs  wasm_plugin.rs  wasmer_engine.rs  wasmtime_engine.rs
plugin-manager/src/sandbox/: linux_namespaces.rs  mod.rs
plugin-manager/src/syscall/: mod.rs
runtime/: Cargo.toml
runtime/benches/: container_benchmarks.rs
runtime/src/: lib.rs
runtime/src/attestation/: mod.rs
runtime/src/config/: loader.rs  mod.rs  saver.rs  tests.rs  validator.rs
runtime/src/contract/: mod.rs  zta.rs
runtime/src/dna/: mod.rs
runtime/src/engine/: mod.rs
runtime/src/fs/: mod.rs
runtime/src/lifecycle/: mod.rs
runtime/src/mesh/: mod.rs
runtime/src/metrics/: mod.rs
runtime/src/network/: mod.rs
runtime/src/plugin_bridge/: mod.rs
runtime/src/registry/: create.rs  mod.rs
runtime/src/rpc/: mod.rs
runtime/src/runtime/: mod.rs
runtime/src/scheduler/: mod.rs
runtime/src/security/: mod.rs
runtime/src/state/: mod.rs
runtime/src/tracing/: mod.rs
syscall-bridge/: README.md  mod.rs
(+27 files in other folders)
