[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Conscious Kernel Substrate of trust-aware, AI-augmented, self-adaptive, enterprise container intelligence"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = { version = "0.10", features = ["oid"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
opentelemetry = { version = "0.20", features = ["trace"] }
metrics = "0.21"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = "0.6"
base64 = "0.21"
dotenvy = "0.15"  
toml = "0.9.0"
bincode = "1.3"
anyhow = "1.0"
dilithium = "0.1.2"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
hkdf = "0.12"
subtle = "2.4"
jsonwebtoken = "9.0"
r2d2 = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
snap = "1.1"
blake3 = "1.5"
zstd = "0.11"
xz2 = "0.1.5"
semver = { version = "1", features = ["serde"] }
regex = "1.10"
redb = "1.0"
rkyv = { version = "0.7", features = ["validation"] }
axum = { version = "0.6", features = ["headers"] }
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
prometheus = "0.13"
warp = "0.3"
indxdb = "0.7.0"
once_cell = "1.21.3"

[dev-dependencies]
proptest = "1"
tempfile = "3.0"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = "symbols"
incremental = false
