[package]
name = "microkernel"
version = "0.1.0"
edition = "2021"
description = "ForgeOne Microkernel - A sentient, reflexive, cryptographically sovereign execution brain"

[dependencies]
common = { path = "../common" }
wasmtime = { version = "9.0.3", optional = true }
wasmer = { version = "3.1.1", optional = true }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
ed25519-dalek = "2.1"
sha3 = "0.10"
prometheus = "0.13"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
once_cell = "1.21.3"

[features]
default = ["wasmtime-runtime"]
wasmtime-runtime = ["wasmtime"]
wasmer-runtime = ["wasmer"]

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
panic = "abort"
codegen-units = 1
overflow-checks = false
debug = false
incremental = false