[package]
name = "network-manager"
version = "0.1.0"
edition = "2021"
description = "ForgeOne Quantum-Network Fabric Layer - Zero Trust Network Manager"
authors = ["TERO Team"]

[dependencies]
common = { path = "../common" }
plugin-manager = { path = "../plugin-manager" }
runtime = { path = "../runtime" }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
rtnetlink = "0.13"
netlink-packet-route = "0.17"
netlink-sys = "0.8"
ipnetwork = "0.20"
socket2 = "0.5"
netlink-packet-core = "0.7"
netlink-packet-utils = "0.5"

# gRPC
tonic = "0.10"
prost = "0.12"
tonic-web = "0.10"
tower = "0.4"

# WASM
wasmtime = "16.0"
wasmer = "4.2"

# Metrics
prometheus = "0.13"

# Logging and tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
once_cell = "1.18"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
axum = { version = "0.6", features = ["json"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
mockall = "0.11"
test-log = "0.2"

[[bin]]
name = "quantum-cni"
path = "src/bin/quantum-cni.rs"

[[bin]]
name = "quantum-api"
path = "src/bin/quantum-api.rs"