[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2021"
description = "ForgeOne Plugin Manager - A secure, production-ready plugin system with ZTA enforcement"

[dependencies]
common = { path = "../common" }
microkernel = { path = "../microkernel" }
wasmtime = { version = "26.0.0", optional = true }
wasmer = { version = "5.0.5", optional = true }
anyhow = "1.0.93"
thiserror = "2.0.3"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
sha3 = "0.10.8"
prometheus = "0.13.4"
chrono = { version = "0.4.38", features = ["serde"] }
bincode = "1.3.3"
once_cell = "1.21.0"
semver = { version = "1.0.23", features = ["serde"] }
toml = "0.8.19"
axum = { version = "0.7.9", features = ["multipart"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
clap = { version = "4.5.21", features = ["derive"] }
hex = "0.4.3"
flate2 = "1.0"
tar = "0.4"
lazy_static = "1.5.0"
walkdir = "2.5.0"
tracing-subscriber = "0.3.19"

[features]
default = ["wasmtime-runtime"]
wasmtime-runtime = ["wasmtime"]
wasmer-runtime = ["wasmer"]
