[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
description = "ForgeOne Quantum-Grade HyperContainer Runtime"
authors = ["TERO Team"]

[dependencies]
common = { path = "../common" }
microkernel = { path = "../microkernel" }
plugin-manager = { path = "../plugin-manager" }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ring = "0.16.20"
ed25519-dalek = "1.0.1"
sha2 = "0.10.6"
base64 = "0.21.0"

# Logging and tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.18.0"

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.71"

# WebAssembly
wasmtime = "9.0.0"
wasmer = "3.1.1"

# Utilities
uuid = { version = "1.3.3", features = ["v4", "serde"] }
once = "0.3.4"
bytesize = "1.2.0"
prometheus = "0.13.3"
lazy_static = "1.4.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[dev-dependencies]
criterion = "0.4.0"
mockall = "0.11.4"
rstest = "0.17.0"
tempfile = "3.5.0"

[[bench]]
name = "container_benchmarks"
harness = false