[package]
name = "sample-plugin"
version = "0.1.0"
edition = "2021"
description = "Sample plugin for the ForgeOne Plugin Manager"
authors = ["ForgeOne Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true